modifiqué maquetación de index y media queries del mismo

--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet"/>   
   </head>
 
-  <body class="body-index">
- 
-    <div>
-      <section class="container-index">
+  <body>
+    <div class="body-index"  title="bailarín haciendo una pose sobre su cabeza">
+      <header class="header-index">
         <nav class="navbar navbar-expand-sm nav-hamburguesa-index"> <!--menu bs hamburguesa, saqué por ahora bg-light opacity-75-->
           <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,20 +60,29 @@
           <a href="./pages/galeria.html" class="link-3">Galería</a> 
           <a href="./pages/agenda.html" class="link-4">Agenda</a> 
           <a href="./pages/contacto.html" class="link-5">Contacto</a>
-        </nav>      
-        <div class="banner-index" title="bailarín haciendo una pose sobre su cabeza"></div>
-        <div class="nombre">
-          <span class="adam">ADAM</span> 
-          <span class="feiguin">FEIGUIN</span>
-        </div>
-        <ul class="redes-index-desktop">
+        </nav>  
+      </header>
+      <main class="main-index">    
+        <h1 class="h1-index"> ADAM <br> <span class="feiguin">FEIGUIN</span></h1>
+      </main>
+      <footer class="footer-index-d">
+        <ul>
           <li><a target="_blank" href="https://instagram.com/adamfeiguin?igshid=NmNmNjAwNzg="><img src="./assets/icons/instagram.png" alt="Instagram" class="footer-icon"> </a></li>   
           <li><a target="_blank" href="https://www.facebook.com/adam.feiguin"> <img src="./assets/icons/facebook.png" alt="Facebook" class="footer-icon"> </a></li>
           <li><a target="_blank" href="mailto:adamfeiguin@gmail.com"> <img src="./assets/icons/email.png" alt="Email" class="footer-icon"> </a></li>
           <li><a target="_blank" href="https://wa.me/5491160104592?text=Hola"> <img src="./assets/icons/whatsapp.png" alt="Whatsapp" class="footer-icon"> </a></li>
         </ul>
         <p class="derechos">&copy; 2022. Adam Feiguin. Todos los derechos reservados</p>
-      </section>
+      </footer>
+    </div>
+    <div class="footer-index-s">
+      <ul>
+        <li><a target="_blank" href="https://instagram.com/adamfeiguin?igshid=NmNmNjAwNzg="><img src="./assets/icons/instagram.png" alt="Instagram" class="footer-icon"> </a></li>   
+        <li><a target="_blank" href="https://www.facebook.com/adam.feiguin"> <img src="./assets/icons/facebook.png" alt="Facebook" class="footer-icon"> </a></li>
+        <li><a target="_blank" href="mailto:adamfeiguin@gmail.com"> <img src="./assets/icons/email.png" alt="Email" class="footer-icon"> </a></li>
+        <li><a target="_blank" href="https://wa.me/5491160104592?text=Hola"> <img src="./assets/icons/whatsapp.png" alt="Whatsapp" class="footer-icon"> </a></li>
+      </ul>
+      <p class="derechos">&copy; 2022. Adam Feiguin. Todos los derechos reservados</p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
