hice fixed la barra de navegacion

--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -23,8 +23,9 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-sm">
-          <div class="container-fluid">
+      <div class="position-nav">
+        <nav class="navbar navbar-expand-sm mt-0">
+          <div class="container-fluid bg-white">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
               </button>
@@ -51,13 +52,14 @@
                       </li>
                   </ul>
               </div>
-          </div>
+          </div>   
       </nav>
-      <h1>LO QUE SE VIENE</h1>
-      <h2>Próximos cursos, laboratorios, performances y eventos</h2>
+      </div>
     </header>
 
     <main>
+      <h1>LO QUE SE VIENE</h1>
+      <h2>Próximos cursos, laboratorios, performances y eventos</h2>
       <section> <!--arranca seccion workshops-->         
         <section class="contenedor-agenda"> <!--arranca seccion cards workshops-->  
             <article class="card__workshop"> <!--arranca card 1, workshop 1-->
