--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -24,13 +24,14 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-sm">
-          <div class="container-fluid">
+      <div class="position-nav">
+        <nav class="navbar navbar-expand-sm mt-0">
+          <div class="container-fluid bg-white">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-end navBar" id="navbarNavDropdown">
-                  <ul class="navbar-nav" >
+                  <ul class="navbar-nav " >
                       <li class="nav-item">
                           <a class="nav-link" href="../index.html">Inicio</a>
                       </li>
@@ -39,7 +40,7 @@
                       </li>
                       <li class="ms-2 nav-item dropdown">
                           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-autoclose="true" aria-expanded="false">Galería</a>
-                      <ul class="dropdown-menu">
+                      <ul class="dropdown-menu dropdown-pages">
                           <li><a class="dropdown-item" href="../pages/galeria.html">Fotos</a></li>
                           <li><a class="dropdown-item" href="../pages/galeria.html#videos">Videos</a></li>
                       </ul>
@@ -52,16 +53,17 @@
                       </li>
                   </ul>
               </div>
-          </div>
+          </div>   
       </nav>
+      </div>
+    </header>
+
+    <main>
       <h1>HOLA</h1>
       <h2>Contactame a través del siguiente formulario</h2>
       <div class="link-contacto-footer">
         <a href="../pages/contacto.html#footer-contacto">O hacé click aquí para ver mis redes sociales</a>
       </div>
-    </header>
-
-    <main>
       <section class="contendor-formulario">
         <form action="" class="formulario__contacto">
           <div>
