--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -25,13 +25,14 @@
   <body>
 
     <header>
-      <nav class="navbar navbar-expand-sm">
-          <div class="container-fluid">
+      <div class="position-nav">
+        <nav class="navbar navbar-expand-sm mt-0">
+          <div class="container-fluid bg-white">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-end navBar" id="navbarNavDropdown">
-                  <ul class="navbar-nav" >
+                  <ul class="navbar-nav " >
                       <li class="nav-item">
                           <a class="nav-link" href="../index.html">Inicio</a>
                       </li>
@@ -40,7 +41,7 @@
                       </li>
                       <li class="ms-2 nav-item dropdown">
                           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-autoclose="true" aria-expanded="false">Galería</a>
-                      <ul class="dropdown-menu">
+                      <ul class="dropdown-menu dropdown-pages">
                           <li><a class="dropdown-item" href="../pages/galeria.html">Fotos</a></li>
                           <li><a class="dropdown-item" href="../pages/galeria.html#videos">Videos</a></li>
                       </ul>
@@ -53,8 +54,9 @@
                       </li>
                   </ul>
               </div>
-          </div>
+          </div>   
       </nav>
+      </div>
     </header>
 
     <main>
