saque carousel en mobile y agrandé el tamaño de las fotos

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -61,90 +61,90 @@
     <main>
         <h1> AUDIO VISUALES </h1>
         <h2 id="ButtonModal"> Hacé click aquí para ver el slideshow de imágenes</h2>
-      <section class="imgGallery">
-        <!--seccion fotos-->
-        <section class="container-fotos">
-          <div> <img src="../assets/img/desktop/domo1.jpg" alt="bailarín haciendo break dance"  class="foto foto-1" /> </div>
-          <div> <img src="../assets/img/desktop/domo2.jpg" alt="bailarín trepado a una estructura"  class="foto foto-2"/> </div>
-          <div> <img src="../assets/img/desktop/domo3.jpg" alt="bailarín haciendo un salto estilo Superman" class="foto foto-3"/> </div>
-          <div> <img src="../assets/img/desktop/campo1.jpg" alt="bailarín danzando en el campo" class="foto foto-4"/> </div>
-          <div> <img src="../assets/img/desktop/campo2.jpg" alt="bailarín haciendo un paso de danza moderna" class="foto foto-5"/> </div>
-          <div> <img src="../assets/img/desktop/campo3.jpg" alt="bailarín haciendo un salto bolita en el aire" class="foto foto-6"/> </div>
-          <div> <img src="../assets/img/desktop/naked1.jpg" alt="bailarín haciendo un desnudo artístico con un paso de danza contemporánea" class="foto foto-7"/></div>
-          <div> <img src="../assets/img/desktop/naked2.jpg" alt="bailarín haciendo un desnudo artístico con un árbol" class="foto foto-8"/></div>
-          <div> <img src="../assets/img/desktop/naked3.jpg" alt="bailarín haciendo un desnudo artístico con huesos de estudio de anatomía" class="foto foto-9"/></div>
-          <div> <img src="../assets/img/desktop/park1.jpg" alt="bailarín haciendo un salto de danza clásica" class="foto foto-10"/></div>
-          <div> <img src="../assets/img/desktop/park2.jpg" alt="dúo de bailarines realizando partener" class="foto foto-11"/></div>
-          <div> <img src="../assets/img/desktop/park3.jpg" alt="bailarín llevando en el hombro a bailarina" class="foto foto-12"/></div>
-          <div> <img src="../assets/img/desktop/city1.jpg" alt="bailarín haciendo un salto en la fachada del Teatro Colón" class="foto foto-13"/></div>
-          <div> <img src="../assets/img/desktop/city2.jpg" alt="bailarín haciendo una parada en una mano con piernas en alto estilo break dance" class="foto foto-14"/></div>
-          <div> <img src="../assets/img/desktop/city3.jpg" alt="bailarín saltando y pasando una pierna por dentro de la otra" class="foto foto-15"/></div>
-          <div> <img src="../assets/img/desktop/agua1.jpg" alt="bailarín mirando a cámara con un chorro de agua detrás en movimiento" class="foto foto-16"/></div>
-          <div> <img src="../assets/img/desktop/agua2.jpg" alt="bailarín con cara cubierta y envuelta por agua en movimiento con un recorrido circular" class="foto foto-17"/></div>
-          <div> <img src="../assets/img/desktop/agua3.jpg" alt="bailarín mojado con agua en movimiento que le llega desde el lado izquierdo de su cuerpo" class="foto foto-18"/></div>
-          <div> <img src="../assets/img/desktop/winter1.jpg" alt="bailarín improvisando movmientos con sus manos con una campera y su cara oculta" class="foto foto-19"/></div>
-          <div> <img src="../assets/img/desktop/winter2.jpg" alt="rostro de bailarín mirando a cámara con una campera puesta" class="foto foto-20"/></div>
-          <div> <img src="../assets/img/desktop/winter3.jpg" alt="bailarín haciendo variación de un arco sobre el suelo" class="foto foto-21"/></div>
-          <div> <img src="../assets/img/desktop/fruta1.jpg" alt="bailarín sentado improvisando una danza con frutas varias y un sombrero" class="foto-vert foto-22"/></div>
-          <div> <img src="../assets/img/desktop/fruta2.jpg" alt="bailarín improvisando con frutas, verduras, un sombrero y un libro" class="foto-vert foto-23"/></div>
-          <div> <img src="../assets/img/desktop/fruta3.JPG" alt="bailarín improvisando con un broche, un sombrero, libros, frutas y verduras" class="foto-vert foto-24"/></div>
+        <section class="imgGallery">
+            <!--seccion fotos-->
+            <section class="container-fotos">
+                <div> <img src="../assets/img/desktop/domo1.jpg" alt="bailarín haciendo break dance"  class="foto foto-1" /> </div>
+                <div> <img src="../assets/img/desktop/domo2.jpg" alt="bailarín trepado a una estructura"  class="foto foto-2"/> </div>
+                <div> <img src="../assets/img/desktop/domo3.jpg" alt="bailarín haciendo un salto estilo Superman" class="foto foto-3"/> </div>
+                <div> <img src="../assets/img/desktop/campo1.jpg" alt="bailarín danzando en el campo" class="foto foto-4"/> </div>
+                <div> <img src="../assets/img/desktop/campo2.jpg" alt="bailarín haciendo un paso de danza moderna" class="foto foto-5"/> </div>
+                <div> <img src="../assets/img/desktop/campo3.jpg" alt="bailarín haciendo un salto bolita en el aire" class="foto foto-6"/> </div>
+                <div> <img src="../assets/img/desktop/naked1.jpg" alt="bailarín haciendo un desnudo artístico con un paso de danza contemporánea" class="foto foto-7"/></div>
+                <div> <img src="../assets/img/desktop/naked2.jpg" alt="bailarín haciendo un desnudo artístico con un árbol" class="foto foto-8"/></div>
+                <div> <img src="../assets/img/desktop/naked3.jpg" alt="bailarín haciendo un desnudo artístico con huesos de estudio de anatomía" class="foto foto-9"/></div>
+                <div> <img src="../assets/img/desktop/park1.jpg" alt="bailarín haciendo un salto de danza clásica" class="foto foto-10"/></div>
+                <div> <img src="../assets/img/desktop/park2.jpg" alt="dúo de bailarines realizando partener" class="foto foto-11"/></div>
+                <div> <img src="../assets/img/desktop/park3.jpg" alt="bailarín llevando en el hombro a bailarina" class="foto foto-12"/></div>
+                <div> <img src="../assets/img/desktop/city1.jpg" alt="bailarín haciendo un salto en la fachada del Teatro Colón" class="foto foto-13"/></div>
+                <div> <img src="../assets/img/desktop/city2.jpg" alt="bailarín haciendo una parada en una mano con piernas en alto estilo break dance" class="foto foto-14"/></div>
+                <div> <img src="../assets/img/desktop/city3.jpg" alt="bailarín saltando y pasando una pierna por dentro de la otra" class="foto foto-15"/></div>
+                <div> <img src="../assets/img/desktop/agua1.jpg" alt="bailarín mirando a cámara con un chorro de agua detrás en movimiento" class="foto foto-16"/></div>
+                <div> <img src="../assets/img/desktop/agua2.jpg" alt="bailarín con cara cubierta y envuelta por agua en movimiento con un recorrido circular" class="foto foto-17"/></div>
+                <div> <img src="../assets/img/desktop/agua3.jpg" alt="bailarín mojado con agua en movimiento que le llega desde el lado izquierdo de su cuerpo" class="foto foto-18"/></div>
+                <div> <img src="../assets/img/desktop/winter1.jpg" alt="bailarín improvisando movmientos con sus manos con una campera y su cara oculta" class="foto foto-19"/></div>
+                <div> <img src="../assets/img/desktop/winter2.jpg" alt="rostro de bailarín mirando a cámara con una campera puesta" class="foto foto-20"/></div>
+                <div> <img src="../assets/img/desktop/winter3.jpg" alt="bailarín haciendo variación de un arco sobre el suelo" class="foto foto-21"/></div>
+                <div> <img src="../assets/img/desktop/fruta1.jpg" alt="bailarín sentado improvisando una danza con frutas varias y un sombrero" class="foto-vert foto-22"/></div>
+                <div> <img src="../assets/img/desktop/fruta2.jpg" alt="bailarín improvisando con frutas, verduras, un sombrero y un libro" class="foto-vert foto-23"/></div>
+                <div> <img src="../assets/img/desktop/fruta3.JPG" alt="bailarín improvisando con un broche, un sombrero, libros, frutas y verduras" class="foto-vert foto-24"/></div>
+            </section>
+        |   <section id="videos"> 
+        |   <!--seccion videos-->
+        |   <section class="container-videos"> 
+                <div class="video-1">
+                    <iframe
+                        src="https://www.youtube.com/embed/dBg6KAlECyk"
+                        title="Eternidad - Pieza de videodanza por Adam Feiguin"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen
+                        class="video__styling">
+                    </iframe>
+                </div>
+                <div class="video-2">
+                    <iframe
+                        src="https://www.youtube.com/embed/3-MGYgvhKEY"
+                        title="Sinfonía Humana - Pieza de videodanza por Adam Feiguin"
+                        frameborder="0"
+                        allow="accel erometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen
+                        class="video__styling">
+                    </iframe>
+                </div>
+            </section>
         </section>
-      <section id="videos"> 
-        <!--seccion videos-->
-        <section class="container-videos"> 
-          <div class="video-1">
-            <iframe
-            src="https://www.youtube.com/embed/dBg6KAlECyk"
-            title="Eternidad - Pieza de videodanza por Adam Feiguin"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-            class="video__styling">
-            </iframe>
-          </div>
-          <div class="video-2">
-            <iframe
-            src="https://www.youtube.com/embed/3-MGYgvhKEY"
-            title="Sinfonía Humana - Pieza de videodanza por Adam Feiguin"
-            frameborder="0"
-            allow="accel erometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-            class="video__styling">
-            </iframe>
-          </div>
-        </section>
-      </section>
 
-      <!--slide para ventana modal-->
-      <section class="section-c modalContainer" id="myModal">
-        <div class="container-c modalContent" >
-            <span class="close"> X </span>
-            <div class="carousel">  
-                <input type="radio" name="slides" checked="checked" id="slide-1">
-                <input type="radio" name="slides" id="slide-2">
-                <input type="radio" name="slides" id="slide-3">
-                <input type="radio" name="slides" id="slide-4">
-                <input type="radio" name="slides" id="slide-5">
-                <input type="radio" name="slides" id="slide-6">
-                <input type="radio" name="slides" id="slide-7">
-                <input type="radio" name="slides" id="slide-8">
-                <input type="radio" name="slides" id="slide-9">
-                <input type="radio" name="slides" id="slide-10">
-                <input type="radio" name="slides" id="slide-11">
-                <input type="radio" name="slides" id="slide-12">
-                <input type="radio" name="slides" id="slide-13">
-                <input type="radio" name="slides" id="slide-14">
-                <input type="radio" name="slides" id="slide-15">
-                <input type="radio" name="slides" id="slide-16">
-                <input type="radio" name="slides" id="slide-17">
-                <input type="radio" name="slides" id="slide-18">
-                <input type="radio" name="slides" id="slide-19">
-                <input type="radio" name="slides" id="slide-20">
-                <input type="radio" name="slides" id="slide-21">
-                <input type="radio" name="slides" id="slide-22">
-                <input type="radio" name="slides" id="slide-23">
-                <input type="radio" name="slides" id="slide-24">
-                <ul class="carousel__slides">
+        <!--slide para ventana modal-->
+        <section class="section-c modalContainer" id="myModal">
+            <div class="container-c modalContent" >
+                <span class="close"> X </span>
+                <div class="carousel">  
+                    <input type="radio" name="slides" checked="checked" id="slide-1">
+                    <input type="radio" name="slides" id="slide-2">
+                    <input type="radio" name="slides" id="slide-3">
+                    <input type="radio" name="slides" id="slide-4">
+                    <input type="radio" name="slides" id="slide-5">
+                    <input type="radio" name="slides" id="slide-6">
+                    <input type="radio" name="slides" id="slide-7">
+                    <input type="radio" name="slides" id="slide-8">
+                    <input type="radio" name="slides" id="slide-9">
+                    <input type="radio" name="slides" id="slide-10">
+                    <input type="radio" name="slides" id="slide-11">
+                    <input type="radio" name="slides" id="slide-12">
+                    <input type="radio" name="slides" id="slide-13">
+                    <input type="radio" name="slides" id="slide-14">
+                    <input type="radio" name="slides" id="slide-15">
+                    <input type="radio" name="slides" id="slide-16">
+                    <input type="radio" name="slides" id="slide-17">
+                    <input type="radio" name="slides" id="slide-18">
+                    <input type="radio" name="slides" id="slide-19">
+                    <input type="radio" name="slides" id="slide-20">
+                    <input type="radio" name="slides" id="slide-21">
+                    <input type="radio" name="slides" id="slide-22">
+                    <input type="radio" name="slides" id="slide-23">
+                    <input type="radio" name="slides" id="slide-24">
+                    <ul class="carousel__slides">
                     <li class="carousel__slide">
                         <figure>
                             <div>
