modifiqué menú hamburguesa index

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
       <header class="header-index">
         <nav class="navbar navbar-expand-sm nav-hamburguesa-index"> <!--menu bs hamburguesa, saqué por ahora bg-light opacity-75-->
           <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <button class="navbar-toggler bg-light opacity-75" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-center navBar" id="navbarNavDropdown">
-                  <ul class="navbar-nav d-flex justify-content-evenly" >
+                  <ul class="navbar-nav d-flex justify-content-evenly bg-light opacity-75" >
                       <li class="nav-item">
-                          <a class="nav-link bg-light opacity-75" href="./index.html">Inicio</a>
+                          <a class="nav-link " href="./index.html">Inicio</a>
                       </li>
                       <li class="ms-2 nav-item">
                           <a class="nav-link link-2 bg-light opacity-75" href="./pages/sobremi.html">Sobre Mi</a>
