mejoré las prácticas de checkbox formulario contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -87,16 +87,13 @@
               <span>Mensaje:</span>
               <textarea name="mensaje" id="" cols="30" rows="10" class="text-msje" required></textarea> 
             </label> 
-
-            <div class="flex-newsletter">
+            <label for="newsletter" class="label-newsletter flex-newsletter">
+              <input type="checkbox" name="newsletter" id="1" class="checkbox"/>
               <p class="label-newsletter">Deseo recibir el newsletter</p>
-              <label for="newsletter" class="label-newsletter">
-                <input type="checkbox" name="newsletter" id="1" class="checkbox"/>
-              </label> 
+            </label> 
+            <div class="flex-button">
+              <button type="submit" class="button-contacto">Enviar</button>
             </div>
-          <div class="flex-button">
-            <button type="submit" class="button-contacto">Enviar</button>
-          </div>
         </form>
       </section>
     </main> 
